--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: retirenow-backend
     runtime: python
-    # Explicitly requesting Free plan to bypass payment requirement
+    # Backend needs explicit free plan to avoid payment wall
     plan: free
     # Explicit commands for clarity
     buildCommand: cd backend && pip install -r requirements.txt
@@ -22,8 +22,8 @@ services:
   - type: web
     name: retirenow-frontend
     runtime: static
-    # Explicitly requesting Free plan
-    plan: free
+    # NOT setting plan: free here because Static Sites are implicitly free
+    # and do not accept the 'plan' property with value 'free' in Blueprints.
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/build
     envVars:
