--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "dexie-export-import": "^4.1.4",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
@@ -59,6 +60,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.4"
   },
   "scripts": {
