--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "dexie-export-import": "^4.1.4",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.27.1",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.4",
