--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
+    "quickselect": "^3.0.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -57,6 +58,7 @@
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-window": "^2.2.6",
     "recharts": "^3.7.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
